adding encrypt and decrypt api
