# Encrypt_project/password_encryption/api/password_handle.py
@@ -1,11 +1,12 @@
 from flask_injector import inject
 from Flask_projects.Encrypt_project.password_encryption.service.provider import Users_details, Users_create, Login
+from Flask_projects.Encrypt_project.password_encryption.utils.security import ApiSecurity
 
-
-# @inject
-# def Login(login: Login) -> list:
-#     print("Inside the users!!!")
-#     return login.create_admin_user()
+@inject
+def login(login: Login) -> dict:
+    print("Inside the users!!!")
+    # return login.verify_token(login.request.args.get("userid"))
+    return login.verify_token()
 
 @inject
 def AdminUser(admin_user_login: Login) -> list:
@@ -27,3 +28,11 @@ def User(username, user_provider: Users_details) -> list:
 @inject
 def User_create(user_add: Users_create) -> list:
     return user_add.post()
+
+@inject
+def user_encrypt(user_enc: Users_create) -> list:
+    return user_enc.pass_enc()
+
+@inject
+def user_decrypt(username, user_enc: Users_create) -> list:
+    return user_enc.pass_dec(username)
