# Encrypt_project/password_encryption/swagger/user_password.yaml
@@ -23,6 +23,30 @@ schemes:
 - "https"
 - "http"
 paths:
+  /login/:
+    get:
+      tags:
+        - "login"
+      summary: "list all user and password"
+      description: ""
+      operationId: password_encryption.api.password_handle.login
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - name: "userid"
+          in: "query"
+          description: "The name that needs to be fetched. Use user1 for testing. "
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "successfullllllllllllllllll"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not found"
+
   /admin/add/:
     post:
 #      tags:
@@ -87,28 +111,31 @@ paths:
           description: "Unauthorized"
         404:
           description: "Not found"
-#  /user/decrypt/{username}:
-#    get:
-#      tags:
-#      - "users"
-#      summary: "decrypt password of a user"
-#      description: ""
-#      produces:
-#      - "application/xml"
-#      - "application/json"
-#      parameters:
-#      - name: "username"
-#        in: "path"
-#        description: "The name that needs to be fetched. Use user1 for testing. "
-#        required: true
-#        type: "string"
-#      responses:
-#        200:
-#          description: "successful"
-#        401:
-#          description: "Unauthorized"
-#        404:
-#          description: "Not found"
+  /user/decrypt:
+    get:
+      # tags:
+      # - "users"
+      summary: "decrypt password of a user"
+      description: ""
+      operationId: password_encryption.api.password_handle.user_decrypt
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: "query"
+        name: "username"
+        description: "User object that needs to be added"
+        required: true
+        type: "string"
+#        schema:
+#          $ref: "#/definitions/UserEnc"
+      responses:
+        200:
+          description: "successful"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not found"
   /user/add:
     post:
       tags:
@@ -132,35 +159,36 @@ paths:
       responses:
         405:
           description: "Invalid input"
-#  /user/update:
-#    put:
-#      tags:
-#      - "users"
-#      summary: "Add a new user and password"
-#      description: ""
-#      # operationId: "addUser"
-#      consumes:
-#      - "application/json"
-#      - "application/xml"
-#      produces:
-#      - "application/xml"
-#      - "application/json"
-#      parameters:
-#      - in: "body"
-#        name: "body"
-#        description: "User object that needs to be added"
-#        required: true
-#        schema:
-#          $ref: "#/definitions/User"
-#      responses:
-#        405:
-#          description: "Invalid input"
+  /user/encrypt:
+    put:
+      tags:
+      - "users"
+      summary: "Add a new user and password"
+      description: ""
+      operationId: password_encryption.api.password_handle.user_encrypt
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "User object that needs to be added"
+        required: true
+        schema:
+          $ref: "#/definitions/UserEnc"
+      responses:
+        405:
+          description: "Invalid input"
 #  /user/delete/{username}:
 #    delete:
 #      tags:
 #      - "users"
 #      summary: "delete a new user and password"
 #      description: ""
+#      operationId: password_encryption.api.password_handle.user_delete
 #      produces:
 #      - "application/xml"
 #      - "application/json"
@@ -185,6 +213,18 @@ definitions:
          # format: "int64"
        group:
          type: "string"
+  UserEnc:
+    type: "object"
+    properties:
+      # id:
+      #   type: "integer"
+      #   format: "int64"
+      user:
+        type: "string"
+        # format: "int64"
+      password:
+        description: "password which needs to be encrypted"
+        type: "string"
   User:
     type: "object"
     properties:
@@ -200,13 +240,13 @@ definitions:
         description: "password which needs to be encrypted"
         type: "string"
 
-      encryptionType:
-        type: "string"
-        description: "encryption type"
-        enum:
-        - "md5"
-        - "AES"
-        - "delivered"
+#      encryptionType:
+#        type: "string"
+#        description: "encryption type"
+#        enum:
+#        - "md5"
+#        - "AES"
+#        - "delivered"
 
   Adminuser:
     type: "object"
@@ -228,3 +268,31 @@ definitions:
 #        - "md5"
 #        - "AES"
 #        - "delivered"
+
+
+#components:
+#  responses:
+#    NotFound:
+#      description: The specified resource was not found
+#      content:
+#        application/json:
+#          schema:
+#            $ref: '#/components/schemas/Error'
+#    Unauthorized:
+#      description: Unauthorized
+#      content:
+#        application/json:
+#          schema:
+#            $ref: '#/components/schemas/Error'
+#  schemas:
+#    # Schema for error response body
+#    Error:
+#      type: object
+#      properties:
+#        code:
+#          type: string
+#        message:
+#          type: string
+#      required:
+#        - code
+#        - message
